# StateTrans

./: CMakeLists.txt  LICENSE  README.md
docs/: doxygen.config
examples/: CMakeLists.txt  example1.cpp
src/: CMakeLists.txt  Machine.cpp  Machine.hpp  State.cpp  State.hpp  Transition.cpp  Transition.hpp
test/: CMakeLists.txt  state_test.cpp
